# git-tomb

./: .gitignore  .vercelignore  AGENTS.md  App.tsx  CLAUDE.md  README.md  constants.ts  i18n.tsx  index.html  metadata.json  next.config.mjs  package-lock.json  package.json  test-supabase.html  types.ts  vite.config.ts
.claude/: settings.local.json
components/: BurialForm.tsx  ExternalLink.tsx  Footer.tsx  GhostScanner.tsx  GraveyardList.tsx  Header.tsx  IdentityModal.tsx  KinSearch.tsx  Leaderboard.tsx  LoginButton.tsx  PriestLeaderboard.tsx  SettingsModal.tsx  Tombstone.tsx
portable-release/: PORTABLE-README.md  README.txt
scripts/: README.md  SUPABASE_SETUP.md  add-view-count.sql  allow-anon-respects-simple.sql  dev-tauri.mjs  dev-with-port.mjs  supabase-init.sql  update-rls-policies.sql
services/: authContext.tsx  geminiService.ts  githubService.ts  graveyardService.ts  identityService.ts  supabaseClient.ts
src/: vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: create-icon.js  create-icon.mjs  create_icon.py  create_simple_ico.py  generator.html
supabase/: rituals.txt
supabase/functions/ask-priest/: index.ts
